--- a/index.html
+++ b/index.html
@@ -1,16 +1,27 @@
 <!DOCTYPE html>
-<html lang="en" ng-app="string">
+<html lang="en" ng-app="miBank">
 	<head>
 		<title>Examen 1</title>
 		<meta charset="UTF-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 		<link rel="stylesheet" type="text/css" href="CSS/style.css">
 		<link rel="stylesheet" type="text/css" href="bower_components/bootstrap/dist/css/bootstrap.min.css">
+		<link rel="stylesheet" type="text/css" href="bower_components/bootstrap/dist/css/bootstrap-theme.min.css">
 	</head>
 	<body>
+		<nav class="navbar navbar-inverse ">
+		  <div class="container">
+			<ul class="nav navbar-nav">
+				<li class="active"><a href="/"><h5>Create Account</h5></a></li>
+				<li><a href="#/summary"><h5>Consolidated</h5></a></li>
+				<li><a href="#/movements"><h5>My Movements</h5></a></li>
+				<li><a href="#/detail "><h5>Detailed Movements</h5></a></li>
+				<li><a href="#/edit"><h5>Edit Movements</h5></a></li>
+			</ul>
+		  </div>
+		</nav>
 
-
-
+		
 
 		<div ng-view><!--Displays all views--></div>
 
@@ -24,5 +35,6 @@
 	    <script  src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.4/angular-route.min.js"></script>
 		<script src="js/app.js"></script>
 		<script src="js/mainController.js"></script>
+		<script src="services/myServices.js"></script>
 	</body>
 </html>
